--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
-== README
+# Lunch Roulette
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+A workday doesn't go by were a coworker asks "What's for lunch?" Every day, we find ourselves trying to decide where to eat. I thought it would be fun to create a simple application that utilizes the Foursquare API to return a random suggestion. For now, the app is only good for suggesting places near the Pandora HQ in Oakland.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Built With
+* Rails (v 4.2.8)
+* Foursquare API (used [Foursquare2 gem](https://github.com/mattmueller/foursquare2))
+* React
+* Redux
